// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Books should match the snapshot if type is confirm 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Books
    lovedBook={
      Object {
        "author": "bob loblaw",
        "title": "hi",
      }
    }
    possibleBooks={
      Object {
        "items": Array [
          Object {
            "author": "bob loblaw",
            "title": "hi",
          },
        ],
      }
    }
    recommendations={
      Array [
        Object {
          "author": "bob loblob",
          "title": "hey",
        },
      ]
    }
    type="confirm"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3
          className="books-text"
        >
          Confirm your loved book:
        </h3>,
        <hr />,
        <div
          className="books-container"
        >
          <Connect(BookCard)
            author="bob loblaw"
            title="hi"
            type="confirm"
          />
          <h3
            className="end-text"
          >
            Don't see your book? Click
            <span>
              <Link
                replace={false}
                to="/new"
              >
                 here 
              </Link>
            </span>
            to try again.
          </h3>
        </div>,
      ],
      "className": "books",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Confirm your loved book:",
          "className": "books-text",
        },
        "ref": null,
        "rendered": "Confirm your loved book:",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <Connect(BookCard)
                author="bob loblaw"
                title="hi"
                type="confirm"
              />,
            ],
            <h3
              className="end-text"
            >
              Don't see your book? Click
              <span>
                <Link
                  replace={false}
                  to="/new"
                >
                   here 
                </Link>
              </span>
              to try again.
            </h3>,
          ],
          "className": "books-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "author": "bob loblaw",
              "title": "hi",
              "type": "confirm",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Don't see your book? Click",
                <span>
                  <Link
                    replace={false}
                    to="/new"
                  >
                     here 
                  </Link>
                </span>,
                "to try again.",
              ],
              "className": "end-text",
            },
            "ref": null,
            "rendered": Array [
              "Don't see your book? Click",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/new"
                  >
                     here 
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": " here ",
                    "replace": false,
                    "to": "/new",
                  },
                  "ref": null,
                  "rendered": " here ",
                  "type": [Function],
                },
                "type": "span",
              },
              "to try again.",
            ],
            "type": "h3",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="books-text"
          >
            Confirm your loved book:
          </h3>,
          <hr />,
          <div
            className="books-container"
          >
            <Connect(BookCard)
              author="bob loblaw"
              title="hi"
              type="confirm"
            />
            <h3
              className="end-text"
            >
              Don't see your book? Click
              <span>
                <Link
                  replace={false}
                  to="/new"
                >
                   here 
                </Link>
              </span>
              to try again.
            </h3>
          </div>,
        ],
        "className": "books",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Confirm your loved book:",
            "className": "books-text",
          },
          "ref": null,
          "rendered": "Confirm your loved book:",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <Connect(BookCard)
                  author="bob loblaw"
                  title="hi"
                  type="confirm"
                />,
              ],
              <h3
                className="end-text"
              >
                Don't see your book? Click
                <span>
                  <Link
                    replace={false}
                    to="/new"
                  >
                     here 
                  </Link>
                </span>
                to try again.
              </h3>,
            ],
            "className": "books-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "author": "bob loblaw",
                "title": "hi",
                "type": "confirm",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Don't see your book? Click",
                  <span>
                    <Link
                      replace={false}
                      to="/new"
                    >
                       here 
                    </Link>
                  </span>,
                  "to try again.",
                ],
                "className": "end-text",
              },
              "ref": null,
              "rendered": Array [
                "Don't see your book? Click",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/new"
                    >
                       here 
                    </Link>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": " here ",
                      "replace": false,
                      "to": "/new",
                    },
                    "ref": null,
                    "rendered": " here ",
                    "type": [Function],
                  },
                  "type": "span",
                },
                "to try again.",
              ],
              "type": "h3",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Books should match the snapshot if type is recommendations 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Books
    lovedBook={
      Object {
        "author": "bob loblaw",
        "title": "hi",
      }
    }
    possibleBooks={
      Array [
        Object {
          "author": "bob loblaw",
          "title": "hi",
        },
      ]
    }
    recommendations={
      Array [
        Object {
          "author": "bob loblob",
          "title": "hey",
        },
      ]
    }
    type="recommendations"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3
          className="books-text"
        >
          Here are some recommendations based on '[object Object]':
        </h3>,
        <hr />,
        <div
          className="books-container"
        >
          <Connect(BookCard)
            author="bob loblob"
            title="hey"
            type="recommendations"
          />
        </div>,
      ],
      "className": "books",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Here are some recommendations based on '[object Object]':",
          "className": "books-text",
        },
        "ref": null,
        "rendered": "Here are some recommendations based on '[object Object]':",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <Connect(BookCard)
                author="bob loblob"
                title="hey"
                type="recommendations"
              />,
            ],
            undefined,
          ],
          "className": "books-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "author": "bob loblob",
              "title": "hey",
              "type": "recommendations",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          undefined,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="books-text"
          >
            Here are some recommendations based on '[object Object]':
          </h3>,
          <hr />,
          <div
            className="books-container"
          >
            <Connect(BookCard)
              author="bob loblob"
              title="hey"
              type="recommendations"
            />
          </div>,
        ],
        "className": "books",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Here are some recommendations based on '[object Object]':",
            "className": "books-text",
          },
          "ref": null,
          "rendered": "Here are some recommendations based on '[object Object]':",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <Connect(BookCard)
                  author="bob loblob"
                  title="hey"
                  type="recommendations"
                />,
              ],
              undefined,
            ],
            "className": "books-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "author": "bob loblob",
                "title": "hey",
                "type": "recommendations",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            undefined,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
